--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR" class="scroll-smooth">
 <head>
@@ -16,7 +15,15 @@
       body {
         font-family: 'Inter', sans-serif;
       }
+      .drag-handle {
+        cursor: grab;
+      }
+      .sortable-ghost {
+        opacity: 0.4;
+        background-color: #c8e6c9;
+      }
     </style>
+    
     <script>
       tailwind.config = {
         theme: {
@@ -41,7 +48,9 @@
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/"
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.3.0/",
+    "sortablejs": "https://aistudiocdn.com/sortablejs@^1.15.6"
   }
 }
 </script>
