com emoji 🍕 Pizzaria Santa Sensação - Tradição artesanal desde 1909. A pizza nº 1 do Espírito Santo com ingredientes frescos e forno a lenha.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzaria Santa Sensação - A pizza nº 1 do ES</title>
-    <meta name="description" content="Pizzaria Santa Sensação - Tradição artesanal desde 1909. A pizza nº 1 do Espírito Santo com ingredientes frescos e forno a lenha.">
+    <meta name="description" content="🍕 Pizzaria Santa Sensação - Tradição artesanal desde 1909. A pizza nº 1 do Espírito Santo com ingredientes frescos e forno a lenha.">
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/the-muller/pizzaria-santa-sensacao/main/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
