--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🍕 Pizzaria Santa Sensação - A pizza nº 1 do ES</title>
+    <title> Pizzaria Santa Sensação - A pizza nº 1 do ES</title>
     <meta name="description" content=" Pizzaria Santa Sensação - Tradição artesanal desde 1909. A pizza nº 1 do Espírito Santo com ingredientes frescos e forno a lenha.">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍕</text></svg>">
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/the-muller/pizzaria-santa-sensacao/main/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
