--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzaria Santa Sensação - A pizza nº 1 do ES</title>
-    <meta name="description" content="Pizzaria Santa Sensação - Tradição artesanal desde 1909. A pizza nº 1 do Espírito Santo com ingredientes frescos e forno a lenha.">
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/the-muller/pizzaria-santa-sensacao/main/logo.png">
+    <meta name="description" content="Pizzaria Santa Sensação - A pizza nº 1 do Espírito Santo, premiada no Panshow 2025 e com a assinatura do mestre Luca Lonardi.">
+    
+    <!-- FAVICON: A linha abaixo usa um emoji como ícone. -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍕</text></svg>">
+    <!-- PARA USAR SEU LOGO:
+    1. Faça o upload do seu arquivo de logo (ex: 'logo.png', 'favicon.ico') para a mesma pasta do projeto.
+    2. Comente ou apague a linha do emoji acima.
+    3. Descomente a linha abaixo e verifique se o caminho em `href` está correto.
+    <link rel="icon" type="image/png" href="./logo.png">
+    -->
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
