tudo imagem de fundo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Pizzaria Santa Sensação - A pizza nº 1 do ES</title>
     <meta name="description" content="Pizzaria Santa Sensação - A pizza nº 1 do Espírito Santo, premiada no Panshow 2025 e com a assinatura do mestre Luca Lonardi.">
     
@@ -23,6 +23,7 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
+        overflow-x: hidden;
       }
       .drag-handle {
         cursor: grab;
