ver mas ta ruim

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       }
       .drag-handle {
         cursor: grab;
+        touch-action: none; /* Melhora a experiência de arrastar em dispositivos móveis */
       }
       .sortable-ghost {
         opacity: 0.4;
